updates game play